src/main/java/com/example/springmvc/core/support/error/ErrorCode.java
package com.example.springmvc.core.support.error;

public enum ErrorCode {
    TEST,

    HANDLER_NOT_FOUND,
    INTERNAL_SERVER_ERROR
}
